--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
-  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,15 +8,16 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^31.0.2",
-    "expo-cli": "^2.9.0",
-    "native-base": "^2.8.1",
+    "expo": "^32.0.0",
+    "native-base": "2.8.1",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.0"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-animatable": "^1.3.1",
+    "react-native-vector-icons": "^6.2.0",
+    "react-navigation": "^3.2.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
-  }
+  },
+  "private": true
 }
