--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "octa_maps",    
+    "name": "Octa.Maps",    
     "description": "APP de autodirecionamento do Campus IFMT-Octayde",
     "slug": "OctaMaps",
     "privacy": "public",
