--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.1",
+    "react-native-app-link": "^1.0.0",
+    "react-native-local-mongodb": "^2.2.5",
     "react-native-progress-circle": "^2.0.1",
     "react-native-vector-icons": "6.1.0",
+    "react-native-video": "^4.4.0",
     "react-navigation": "^3.2.1"
   },
   "devDependencies": {
