--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "array-sync": "^3.0.1",
     "axios": "^0.18.0",
     "expo": "^32.0.0",
-    "native-base": "2.8.1",
+    "native-base": "^2.12.1",
     "pouchdb-react-native": "^6.4.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
