--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.1",
     "axios": "^0.18.0",
     "expo": "^32.0.0",
     "native-base": "^2.12.1",
