--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.1",
-    "axios": "^0.18.0",
+    "axios": "0.18.1",
     "expo": "^32.0.0",
     "native-base": "^2.12.1",
     "pouchdb-react-native": "^6.4.1",
