--- a/package.json
+++ b/package.json
@@ -4,26 +4,30 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.1",
-    "axios": "0.18.1",
-    "expo": "^32.0.0",
+    "array-sync": "^3.0.1",
+    "axios": "^0.19.0",
+    "expo": "^33.0.0",
+    "expo-av": "^5.0.2",
     "native-base": "^2.12.1",
     "pouchdb-react-native": "^6.4.1",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-animatable": "^1.3.1",
+    "react": "16.8.3",
+    "react-dom": "^16.8.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-animatable": "^1.3.2",
     "react-native-app-link": "^1.0.0",
-    "react-native-progress-circle": "^2.0.1",
-    "react-native-searchable-dropdown": "^1.0.6",
-    "react-native-vector-icons": "6.1.0",
-    "react-native-video": "^4.4.0",
-    "react-navigation": "^3.2.1"
+    "react-native-cached-image": "^1.4.3",
+    "react-native-local-mongodb": "^2.2.9",
+    "react-native-svg": "^9.5.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.1.1"
   },
   "private": true
 }
