--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   "dependencies": {
     "array-sync": "^3.0.1",
     "axios": "^0.19.0",
-    "expo": "^33.0.0",
-    "expo-av": "^5.0.0",
+    "expo": "^37.0.0",
+    "expo-av": "~8.1.0",
+    "expo-updates": "~0.1.2",
     "native-base": "^2.13.8",
     "pouchdb-react-native": "^6.4.1",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-app-link": "^1.0.0",
     "react-native-cached-image": "^1.4.3",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-local-mongodb": "^2.2.9",
-    "react-native-svg": "^9.4.0",
+    "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.4",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
