--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,10 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+# Ignore build ( Android Studio)
+android/app/build/*
+android/.gradle/*
+
+android/app/build/
+android/.gradle/
