--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native": "^0.62.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-pixel-color": "^1.1.0-alpha.23",
     "react-native-image-mapper": "^0.1.11",
+    "react-native-pixel-color": "^0.0.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^2.0.0",
     "react-native-screens": "^2.8.0",
