--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.9.0",
     "@unpourtous/react-native-search-list": "^2.1.2",
     "expo": "~38.0.9",
+    "expo-av": "~8.2.1",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
