--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
