--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-motion": "^1.0.5",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
@@ -38,6 +41,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "compress-images": "^1.9.5",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.11.0"
   },
